first working version with single circle